AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/libs 
AM_CXXFLAGS = -fPIC

noinst_LIBRARIES = libjpeg.a
libjpeg_a_SOURCES = jcomapi.cpp \
                    jddctmgr.cpp \
                    jdhuff.cpp \
                    jmemmgr.cpp \
                    jutils.cpp \
                    jmemnobs.cpp \
                    jdapimin.cpp \
                    jdcolor.cpp \
                    jpgload.cpp \
                    jdmainct.cpp \
                    jdinput.cpp \
                    jdcoefct.cpp \
                    jfdctflt.cpp \
                    jdmaster.cpp \
                    jdpostct.cpp \
                    jerror.cpp \
                    jdtrans.cpp \
                    jidctflt.cpp \
                    jdapistd.cpp \
                    jdsample.cpp \
                    jdatasrc.cpp \
                    jdmarker.cpp
