AM_CPPFLAGS = -I../../include -I../../libs 
AM_CFLAGS = -fPIC

noinst_LIBRARIES = libpicomodel.a
libpicomodel_a_SOURCES = picointernal.c \
                         lwo/vecmath.c \
                         lwo/clip.c \
                         lwo/surface.c \
                         lwo/pntspols.c \
                         lwo/list.c \
                         lwo/envelope.c \
                         lwo/vmap.c \
                         lwo/lwio.c \
                         lwo/lwo2.c \
                         lwo/lwob.c \
                         pm_mdc.c \
                         pm_terrain.c \
                         pm_3ds.c \
                         pm_md3.c \
                         picomodel.c \
                         pm_ms3d.c \
                         pm_obj.c \
                         pm_lwo.c \
                         pm_fm.c \
                         pm_md2.c \
                         pm_ase.c \
                         picomodules.c
